# API

./: .env.example  .funcignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.render  Dockerfile.waifly  ENDPOINTS.md  FAIL2BAN_SETUP.md  GUIDE.md  LICENSE  README.md  api.py  app.py  benchmark_providers.py  benchmarks_results.json  config.py  config.toml  deploy-azure.sh  docs.md  function_app.py  host.json  keep_alive.py  litellm_config.yaml  litellm_config_render.yaml  log.py  main.py  proxy.py  pyproject.toml  requirements-litellm.txt  requirements-slim.txt  requirements.txt  run.py  start-render.sh  start-waifly.sh  start.sh  user_agents.json
.github/workflows/: ci.yml  (+2 more)
api/: __init__.py  api.py
endpoints/: 01_root.py  04_debug.py  05_favicon.py  06_proxy_custom.py  07_proxy_global.py  08_api_status.py  09_api_docs.py  10_api_resources.py  99_api_catchall.py  api_catchall.py  api_resources.py  api_status.py  asn.py  client_ip.py  color_palette.py  color_random.py  cookies.py  date_add.py  date_diff.py  date_easter.py  date_range.py  date_solstice.py  date_weekday.py  debug.py  dice.py  divisors.py  dns_batch.py  dns_ptr.py  dns_soa.py  dns_srv.py  dns_zone_transfer.py  encode_binary.py  encode_hex.py  encode_punycode.py  encode_quoted_printable.py  encode_rot47.py  factors.py  favicon.py  fibonacci.py  format_csv.py  (+66 more)
fail2ban/: alphallm-404.conf  alphallm-404.local  alphallm-bruteforce.conf  alphallm-endpoint-abuse.conf  alphallm.conf  jail.conf
prisma_client/: actions.py  bases.py  client.py
scripts/: generate_docs.sh
tests/: test_endpoints.py
(+129 files in other folders)
