[project]
name = "api-proxy"
version = "2.0.0"
description = "Proxy API with dynamic endpoint loading, rate limiting, and self-keepalive for Render"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "httpx",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-whois",
    "deep-translator",
    "dnspython",
    "playwright",
    "cloudscraper",
    "qrcode[pil]",
    "markdown",
    "croniter",
    "pyjwt",
    "phonenumbers",
    "pycountry",
    "zxcvbn",
    "user-agents",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.uv]
dev-dependencies = ["pytest"]
